# k-on

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  UML.drawio  create_database.sh
project/: CMakeLists.txt  config.txt  create_database.sh  drop_database.sh  error.html  fill_database.sh  form.html  index.html  main_web_server.cpp  package.json  server.cpp  server.h  test_master.cpp  test_server.cpp  test_worker.cpp  try_asio.cpp
project/include/: DbWorkerUser.h  TcpClient.h  TcpServer.h  TcpServerUser.h  Tcp_client.h  Tcp_server.h  User.h  client.h  db_entities.h  db_recommendation_system.h  db_worker.h  db_worker_recommendation.h  db_worker_recommendations.h  db_worker_user.h  db_wrapper.h  json.h  manager.h  recommendation_system.h  song.h  tcp_client.h  tcp_server.h  tcp_server_recommendation.h  tcp_server_recommendations.h  tcp_server_user.h  url_parser.h  user.h  user_system.h  utils.h  web_server.h
project/src/: DbWorkerUser.cpp  MainUserServer.cpp  TcpClient.cpp  TcpServer.cpp  TcpServerUser.cpp  Tcp_client.cpp  Tcp_server.cpp  User.cpp  client.cpp  db_entities.cpp  db_recommendation_system.cpp  db_worker.cpp  db_worker_recommendations.cpp  db_worker_user.cpp  db_wrapper.cpp  json.cpp  main.cpp  main_recommendation_server.cpp  main_user_server.cpp  main_web_server.cpp  manager.cpp  recommendation_system.cpp  tcp_client.cpp  tcp_server.cpp  tcp_server_recommendation.cpp  tcp_server_recommendations.cpp  tcp_server_user.cpp  url_parser.cpp  user.cpp  user_system.cpp  utils.cpp  web_server.cpp
project/tests/: tests.cpp
tests/: CMakeLists.txt  test_recommendation_server.cpp  test_recommendation_system.cpp  test_server.cpp  test_user.cpp  test_worker.cpp  tests.cpp
